tests/neg-custom-args/captures/fresh-fields.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/fresh-fields.scala:25:13 ---------------------------------
25 |  val _: B = b // error
   |             ^
   |             Found:    (b : B^{any})
   |             Required: B
   |
   |             Note that capability `any` is not included in capture set {}.
   |
   |             where:    any is a root capability in the type of value b
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/fresh-fields.scala:27:13 ---------------------------------
27 |  val _: C = c // error
   |             ^
   |             Found:    (c : C^{any})
   |             Required: C
   |
   |             Note that capability `any` is not included in capture set {}.
   |
   |             where:    any is a root capability in the type of value c
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/fresh-fields.scala:29:13 ---------------------------------
29 |  val _: D = d // error
   |             ^
   |             Found:    (d : D^{any})
   |             Required: D
   |
   |             Note that capability `any` is not included in capture set {}.
   |
   |             where:    any is a root capability in the type of value d
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/fresh-fields.scala:31:13 ---------------------------------
31 |  val _: E = e // error
   |             ^
   |             Found:    (e : E^{any})
   |             Required: E
   |
   |             Note that capability `any` is not included in capture set {}.
   |
   |             where:    any is a root capability classified as SharedCapability in the type of value e
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/fresh-fields.scala:33:13 ---------------------------------
33 |  val _: F = f // error
   |             ^
   |             Found:    (f : F^{any})
   |             Required: F
   |
   |             Note that capability `any` is not included in capture set {}.
   |
   |             where:    any is a root capability in the type of value f
   |
   | longer explanation available when compiling with `-explain`
